--- a/section1/1.html
+++ b/section1/1.html
@@ -6,10 +6,16 @@
   <body>
     <script>
       function solution(a, b, c) {
+        let answer;
+        if (a > b) answer = b;
+        else answer = a;
+        if (answer > c) answer = c;
         
+        return answer;
+         
       }
 
-      console.log(solution(2, 5, 1));
+      console.log(solution(3, 5, 9));
     </script>
   </body>
 </html>
