--- a/section1/3.html
+++ b/section1/3.html
@@ -1,17 +1,17 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>출력결과</title>
-    </head>
-    <body>
-        <script>
-            function solution(n){
-                let answer;
-                
-                return answer;
-            }
+  <head>
+    <meta charset="UTF-8" />
+    <title>출력결과</title>
+  </head>
+  <body>
+    <script>
+      function solution(n) {
+        let answer;
+        answer = parseInt(n / 12);
+        return answer;
+      }
 
-            console.log(solution(178));
-        </script>
-    </body>
+      console.log(solution(178));
+    </script>
+  </body>
 </html>
