#3 Fix code : ParseInt하면 나머지는 버려지는데 Math.Ceil()은 소수점 이하를 올림해준다.

--- a/section1/3.html
+++ b/section1/3.html
@@ -7,7 +7,7 @@
     <script>
       function solution(n) {
         let answer;
-        answer = parseInt(n / 12);
+        answer = Math.ceil(n / 12);
         return answer;
       }
 
