--- a/section1/5.html
+++ b/section1/5.html
@@ -1,19 +1,23 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>출력결과</title>
-    </head>
-    <body>
-        <script>
-            function solution(arr){         
-                
-                
-                return answer;
+  <head>
+    <meta charset="UTF-8" />
+    <title>출력결과</title>
+  </head>
+  <body>
+    <script>
+      function solution(arr) {
+        let answer,
+          min = Number.MAX_SAFE_INTEGER;
+        for (let i = 0; i < arr.length; i++) {
+          if (arr[i] < min) min = arr[i];
+        }
+        answer = min;
 
-            }
+        return answer;
+      }
 
-            let arr=[5, 7, 1, 3, 2, 9, 11];
-            console.log(solution(arr));
-        </script>
-    </body>
+      let arr = [5, 7, 1, 3, 2, 9, 11];
+      console.log(solution(arr));
+    </script>
+  </body>
 </html>
