#4 Add comment : Number.MAX_SAFE_INTEGER은 JavaScript에서 안전한 최대 정수값을 의미한다.

--- a/section1/5.html
+++ b/section1/5.html
@@ -7,7 +7,7 @@
     <script>
       function solution(arr) {
         let answer,
-          min = Number.MAX_SAFE_INTEGER;
+          min = Number.MAX_SAFE_INTEGER; // JavaScript에서 안전한 최대 정수값
         for (let i = 0; i < arr.length; i++) {
           if (arr[i] < min) min = arr[i];
         }
