--- a/section1/3.html
+++ b/section1/3.html
@@ -7,7 +7,7 @@
     <script>
       function solution(n) {
         let answer;
-        answer = Math.ceil(n / 12);
+        answer = Math.ceil(n / 12); // Math.ceil() 은 소수점 이하의 수를 올림
         return answer;
       }
 
