--- a/section1/7.html
+++ b/section1/7.html
@@ -7,6 +7,9 @@
     <script>
       function solution(day, arr) {
         let answer = 0;
+        for (let i = 0; i < arr.length; i++) {
+          if (arr[i] % 10 === day) answer++;
+        }
 
         return answer;
       }
