--- a/section1/10.html
+++ b/section1/10.html
@@ -7,12 +7,15 @@
     <script>
       function solution(s, t) {
         let answer = 0;
+        for (let i = 0; i < str.length; i++) {
+          if (str.charAt(i) == t) answer++;
+        }
 
         return answer;
       }
 
       let str = "COMPUTERPROGRAMMING";
-      console.log(solution(str, "R"));
+      console.log(solution(str, "C"));
     </script>
   </body>
 </html>
