--- a/section1/11.html
+++ b/section1/11.html
@@ -7,11 +7,14 @@
     <script>
       function solution(s) {
         let answer = 0;
+        for (let i of str) {
+          if (i === i.toUpperCase()) answer++;
+        }
 
         return answer;
       }
 
-      let str = "KoreaTimeGood";
+      let str = "ILoveSangJoLee";
       console.log(solution(str));
     </script>
   </body>
