--- a/section1/12.html
+++ b/section1/12.html
@@ -7,7 +7,7 @@
     <script>
       function solution(s) {
         let answer = "";
-
+        answer = str.toLocaleUpperCase();
         return answer;
       }
 
