--- a/section1/13.html
+++ b/section1/13.html
@@ -7,6 +7,10 @@
     <script>
       function solution(s) {
         let answer = "";
+        for (let x of s) {
+          if (x == x.toLocaleUpperCase()) answer += x.toLocaleLowerCase();
+          else answer += x.toLocaleUpperCase();
+        }
 
         return answer;
       }
