--- a/section1/14.html
+++ b/section1/14.html
@@ -8,6 +8,12 @@
       function solution(s) {
         let answer = "",
           max = Number.MIN_SAFE_INTEGER;
+        for (let x of s) {
+          if (x.length > max) {
+            max = x.length;
+            answer = x;
+          }
+        }
 
         return answer;
       }
