--- a/section1/15.html
+++ b/section1/15.html
@@ -6,11 +6,19 @@
   <body>
     <script>
       function solution(s) {
-        let answer;
+        let answer = "";
+
+        if (s.length % 2 == 0) {
+          answer = s.charAt(s.length / 2 - 1) + s.charAt(s.length / 2);
+          console.log("짝수");
+        } else {
+          answer = s.charAt(s.length / 2);
+          console.log("홀수");
+        }
 
         return answer;
       }
-      console.log(solution("study"));
+      console.log(solution("studys"));
     </script>
   </body>
 </html>
