--- a/section1/16.html
+++ b/section1/16.html
@@ -7,10 +7,13 @@
     <script>
       function solution(s) {
         let answer = "";
+        for (let i = 0; i < s.length; i++) {
+          if (s.indexOf(s[i]) === i) answer += s[i];
+        }
 
         return answer;
       }
-      console.log(solution("ksekkset"));
+      console.log(solution("ilovesjoleeee"));
     </script>
   </body>
 </html>
