--- a/section1/17.html
+++ b/section1/17.html
@@ -8,6 +8,11 @@
       function solution(s) {
         let answer;
 
+        answer = s.filter((item, index) => {
+          if (s.indexOf(item) === index) return item;
+        });
+        // s.filter((원소, 인덱스) => {조건}) : filter함수는 조건을 만족하는 true 값만 s 배열에 집어넣은 배열을 return함 (배열의 중복제거에 주로 쓰임)
+
         return answer;
       }
       let str = ["good", "time", "good", "time", "student"];
