--- a/sjoleee/section1/17.html
+++ b/sjoleee/section1/17.html
@@ -16,6 +16,9 @@
                     obj[s[i]] = true;
                 }
             }
+            for (let j = 0; j < answer.length; j++) {
+                console.log(answer[j]);
+            }
 
             return answer;
         }
