--- a/section2/시저암호.html
+++ b/section2/시저암호.html
@@ -9,14 +9,16 @@
     <script>
       function solution(s, n) {
         let answer = "";
-        let large = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-        let small = "abcdefghijklmnopqrstuvwxyz";
 
         for (let i = 0; i < s.length; i++) {
           if (s[i] == " ") {
             answer += "";
           } else {
-            answer += String.fromCharCode((s.charCodeAt(i) > 90) ? (s.charCodeAt(i) + n - 97) % 26 + 97 : (s.charCodeAt(i) > 90) ? (s.charCodeAt(i) + n - 97) % 26 + 65)
+            answer += String.fromCharCode(
+              s.charCodeAt(i) > 90
+                ? ((s.charCodeAt(i) + n - 97) % 26) + 97
+                : ((s.charCodeAt(i) + n - 97) % 26) + 65
+            );
           }
         }
 
