--- a/kimhyojin/section6/1.html
+++ b/kimhyojin/section6/1.html
@@ -7,6 +7,18 @@
     <script>
       function solution(s) {
         let answer = "YES";
+        let stack = [];
+
+        for (let x of s) {
+          if (x === "(") stack.push(x);
+          else {
+            if (stack.length === 0) return "NO";
+            stack.pop();
+          }
+        }
+        console.log(stack);
+
+        if (stack.length >= 0) return "NO";
 
         return answer;
       }
