--- a/sjoleee/sj/level2check2.html
+++ b/sjoleee/sj/level2check2.html
@@ -26,6 +26,12 @@
                 board[i][j] = j + 1 + (i * row)
             }
         }
+        let tmp = 0;
+        let a = queries[0][0];
+
+        while () {
+
+        }
 
 
         console.log(board)
