--- a/kimhyojin/programmers/완주하지못한선수.html
+++ b/kimhyojin/programmers/완주하지못한선수.html
@@ -6,28 +6,35 @@
   <body>
     <script>
       function solution(participant, completion) {
-        let answer = [];
+        let answer = "";
 
-        const uniqueParticipants = participant.filter((element, index) => {
-          return dupArr.indexOf(element) === index;
-        });
+        let map = new Map();
 
-        participant.sort();
-        completion.sort();
-
-        console.log(participant);
-        console.log(completion);
-
-        for (let i = 0; i < participant.length; i++) {
-          if (participant[i] !== completion[i]) answer.push(participant[i]);
+        for (let x of participant) {
+          if (map.has(x)) map.set(x, map.get(x) + 1);
+          else map.set(x, 1);
         }
+        console.log(map);
 
-        if (answer.length === 0) answer.push(-1);
+        for (let y of completion) {
+          map.set(y, map.get(y) - 1);
+          if (map.get(y) === 0) map.delete(y);
+        }
+        console.log(map);
+
+        for (let z of map.keys()) {
+          answer = z;
+        }
 
         return answer;
       }
 
-      console.log(solution(["leo", "kiki", "eden"], ["eden", "kiki"]));
+      console.log(
+        solution(
+          ["mislav", "stanko", "mislav", "ana"],
+          ["stanko", "ana", "mislav"]
+        )
+      );
     </script>
   </body>
 </html>
