--- a/kimhyojin/section1/16중복제거(indexOf).html
+++ b/kimhyojin/section1/16중복제거(indexOf).html
@@ -11,9 +11,17 @@
           if (s.indexOf(s[i]) === i) answer += s[i];
         }
 
+        let cnt = 0;
+        let pos = s.indexOf("i");
+        while (pos !== -1) {
+          cnt++;
+          pos = s.indexOf("i", pos + 1);
+        }
+        console.log(cnt);
+
         return answer;
       }
-      console.log(solution("ilovesjoleeee"));
+      console.log(solution("hyojinidisfsfd"));
     </script>
   </body>
 </html>
